# s3-radiko-pro

./: .gitattributes  .gitignore  PLAN.md  README.ja.md  README.md  S3_Radiko.ino  crop_logos.py  es8311.cpp  es8311_wire.h  fetch_logos.py  lv_font_jp_16.h  lv_font_jp_full.c  partitions.csv  station_logos.c  station_logos.h  touch.h
.githooks/: pre-push
.github/workflows/: build.yml  release.yml
arduino/: README.md
arduino/S3_Radiko/: S3_Radiko.ino  lv_font_jp_16.c  touch.h
arduino/tools/: crop_logos.py  fetch_logos.py
docs/: architecture.md  board-lcdwiki-ES3C28P.md  debugging.md  secure-boot-runbook.md
idf/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.signed
idf/components/app_watchdog/: CMakeLists.txt  app_watchdog.c
idf/components/audio/: CMakeLists.txt  audio.c
idf/components/battery/: CMakeLists.txt  battery.c
idf/components/crashlog/: CMakeLists.txt  crashlog.c
idf/components/display/: CMakeLists.txt  display.c  idf_component.yml
idf/components/elog/: CMakeLists.txt  elog.c
idf/components/fonts/: CMakeLists.txt  lv_font_jp_16.c
idf/components/httpc/: CMakeLists.txt  httpc.c
idf/components/i2c_bus/: CMakeLists.txt  i2c_bus.c
idf/components/led/: CMakeLists.txt  (+1 more)
idf/components/libhelix_aac/: CMakeLists.txt  README.md
idf/components/libhelix_aac/include/: ConfigHelix.h
idf/components/libhelix_aac/include/hlxclib/: stdlib.h
idf/components/libhelix_aac/include/utils/: helix_memory.h  helix_pgm.h
idf/components/logos/: CMakeLists.txt  logos_gen.c  logos_small_gen.c  splash_gen.c
idf/components/logos/include/: logos.h
idf/main/: CMakeLists.txt  idf_component.yml  main.c
test/host/: Makefile  main.c  test_hls_parse.c  test_ota_parse.c  test_radiko_parse.c
tools/: elog_dump.py  gen_small_logos.py  gen_splash.py  gen_stationdb.py
(+57 files in other folders)
